Fix out of place colors

--- a/Frontend/src/components/ListingCard.module.css
+++ b/Frontend/src/components/ListingCard.module.css
@@ -2,6 +2,12 @@
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     padding: 0.7rem;
+    transform: scale(1);
+    transition: transform 0.1s ease-in-out;
+}
+
+.cardContainer:hover {
+    transform: scale(1.067);
 }
 
 img {
@@ -33,7 +39,11 @@ img {
     font-weight: 500;
 }
 
-.details {
+.moreDetails {
     font-size: 0.8em;
     margin-right: 0;
+}
+
+.moreDetails:hover {
+    text-decoration: underline;
 }
